--- a/app/views/zesb/tables.html.erb
+++ b/app/views/zesb/tables.html.erb
@@ -145,7 +145,7 @@
         <tr>
           <td>Daedric Smithing</td>
           <td>Can create Daedric armor and weapons at forges, and improve them twice as much.</td>
-          <td>000cb413</span></td>
+          <td><span>000cb413</span></td>
           <td>90 Smithing</td>
           <td>Ebony Smithing</td>
         </tr>
