--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -71,6 +71,13 @@
           <td><input style='font-size: 8pt;' id="summary-finish" type="text" value="<%= (Time.now).strftime("%Y-%m-%d") %>"/></td>
           <td><a id="summary-link" href="/hreports/Summary.html" target='_blank'>HTML</a></td>
         </tr>
+        <tr>
+          <td>Activity</td>
+          <td>Member Activity</td>
+          <td><input style='font-size: 8pt;' id="activity-start" type="text" value="<%= (Time.now - 1.year).strftime("%Y-%m-%d") %>"/></td>
+          <td><input style='font-size: 8pt;' id="activity-finish" type="text" value="<%= (Time.now).strftime("%Y-%m-%d") %>"/></td>
+          <td><a id="activity-link" href="/hreports/Activity.html" target='_blank'>HTML</a></td>
+        </tr>
         <% @historical_report_list.each do |report| %>
             <tr>
               <td><%= report[0] %></td>
