updated activity report

--- a/app/views/reports/_h_Activity.html.erb
+++ b/app/views/reports/_h_Activity.html.erb
@@ -63,7 +63,7 @@
   </tr>
 </table>
 
-<table class='stdTable'>
+<table class='topTable'>
   <tr>
     <td style='text-align: center;' colspan="4" class="valueCell"><b>Unit-Wide Summary</b></td>
   </tr>
