Comment out ClearUnavail button

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -59,7 +59,7 @@
               <p></p>
               <a href="#" id="clear_mail" class="xbutton xgray">Clear eMail <img src="/images/mail.gif" border=0></a>
               <p></p>
-              <a href="#" id="clear_oot" class="xbutton xpink">Clear Unavail</a>
+              <%# <a href="#" id="clear_oot" class="xbutton xpink">Clear Unavail</a>%>
             </td>
           </tr>
         </table>
