Change calendar link

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -54,7 +54,7 @@
               <A href='<%= member_certs_path(current_member) %>' class='small'><i>Edit my certifications</i></A>
             </font>
             </td>
-          </tr>          
+          </tr>
 
           <tr>
             <td valign="top" class="body" bgcolor="#eeeeee"><I><b><font color="#333333" size="2">Calendars and Availability</font></b></I><br></td>
@@ -66,7 +66,7 @@
                 <A href='<%= member_avail_ops_path(current_member)%>' class='small'><i>Edit my availability for operations</i></A><br>          <p>
                 <A href="<%= do_assignments_path %>"><b>Duty Officer schedule</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
                 <span class=small><i><%= avail_dos_link_next_quarter("Edit my Q#{next_quarter_number} DO availability") %></i></span><br><p>
-                <A  target='_blank' href="http://bamru.info/calendar"><b>Public webpage calendar</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+                <A  target='_blank' href="http://bamru.org/calendar"><b>Public webpage calendar</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
                 <A  target='_blank' href='/home/event_publishing' class='small'><i>How to edit the public website calendar</i></A>
               </font>
             </td>
