Update IE error message

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,6 @@
 <% if (env_browser_agent == "IE") %>
   <div style='text-align: center; margin: 60px; font-size: 22px;'>
-    On IE, this page requires the ChromeFrame Plugin.
-    <p style='height: 25px;'></p>
-    <a href="/home/chrome_frame">Learn more...</a>
+    IE Not Supported - Please use Chrome or Firefox
   </div>
 <% else %>
   <div id=x_container>
